Show how to get state info for host-vanilla app

--- a/host-vanilla/src/index.html
+++ b/host-vanilla/src/index.html
@@ -21,6 +21,8 @@
       <div>Logo</div>
       <div>
         <div class="search"></div>
+        <h2 style="font-weight: bold;">Beverages</h2 style="font-weight: bold;">
+        <div class="beverage-list"></div>
       </div>
     </div>
     <div
